# firewall

./: .gitignore  CommonPortsUsedByApple.html  README.md  TECHNICAL_DOCUMENTATION.md  gitignore  new_rules.txt  readme.txt  run.sh
REPORT/: analysis.tex
core/: Cargo.toml  SURICATA_SETUP.md  database.py  engine.py  engine_client.py  login.py  main.py  models.py  requirements.txt
core/api/: blocklist.py  capture.py  logs.py  rules.py  settings.py  tester.py
core/rust-engine/: Cargo.toml  README.md
core/rust-engine/rust-engine/: Cargo.toml
core/rust-engine/rust-engine-common/: Cargo.toml
core/rust-engine/rust-engine-ebpf/: Cargo.toml
core/rust-engine/rust-engine-ebpf/.cargo/: config.toml
core/rust-engine/rust-engine-ebpf/src/: main.rs
core/rust-engine/rust-engine/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  bpf.rs  main.rs  nftables.rs  suricata.rs
crates/xdp-firewall/: Cargo.toml
crates/xdp-firewall/src/: main.rs
implementation/: CORE_DOCUMENTATION.md  WEBUI_DOCUMENTATION.md  architecture.md  core.md  overview.md  webUI.md
manual/: TESTING_GUIDE.md  vm_testing_guide.md
suricata/: linuxshield-custom.rules  setup.sh
webui/: index.html  package-lock.json  package.json  split_app.py  split_app2.py  split_app3.py  split_app4.py  split_app5.py
webui/src/: App.jsx  index.scss
webui/src/components/: AppShell.jsx
webui/src/context/: AppContext.jsx  AuthContext.jsx  NotificationContext.jsx
webui/src/pages/: Blocklist.jsx  Dashboard.jsx  LiveCapture.jsx  Login.jsx  Logs.jsx  PacketTester.jsx  Rules.jsx  Settings.jsx
