[package]
name = "linuxshield-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linuxshield-engine"
path = "src/main.rs"

[dependencies]
# ─── Aya userspace: loads eBPF programs, reads/writes BPF maps ───────────────
aya          = { version = "0.13", features = ["async_tokio"] }
aya-log      = { version = "0.2" }

# ─── Async runtime ───────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }

# ─── Internal HTTP API (FastAPI calls us on :7070) ───────────────────────────
axum         = { version = "0.7", features = ["json"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }

# ─── Serialisation ───────────────────────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ─── Database (reads rules / blocklist that FastAPI writes) ──────────────────
sqlx         = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# ─── Observability ───────────────────────────────────────────────────────────
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# ─── Error handling ──────────────────────────────────────────────────────────
anyhow       = "1"
thiserror    = "1"

# ─── Networking utilities ────────────────────────────────────────────────────
ipnetwork    = "0.20"

# ─── File watching (Suricata eve.json tail) ──────────────────────────────────
notify       = { version = "6", features = ["async"] }
