[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.12.0"
aya-log = "0.2.0"
rust-engine-common = { path = "../rust-engine-common" }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "io-util", "sync", "time"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linemux = "0.2.0"
