[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13.1"
aya-log = "0.2.1"
rust-engine-common = { path = "../rust-engine-common" }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "io-util", "sync", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linemux = "0.3"
